Make `spring-analytics-consumer` as auto-config
* Fix all the Checkstyle violations